# sigmund-analyst

./: example.py  example_editor.py  example_full_editor.py  example_ide.py  example_python_code_editor.py  example_splitter.py  install_sigmund_analyst.sh  pyproject.toml  readme.md  test2.txt
examples/: example_editor_panel.py  example_ide.py  example_jupyter_console_with_workspace_explorer.py  example_project_explorer.py  example_settings_panel.py  example_single_editor.py
pyqt_code_editor/: __init__.py  _settings.py  app.py  code_editors.py  parachute.py  python_utils.py  settings.py  signal_router.py  themes.py  utils.py
pyqt_code_editor/code_editors/: code_editors.py
pyqt_code_editor/components/: editor_panel.py  jupyter_console.py  project_explorer.py  settings_panel.py  sigmund.py  workspace_explorer.py
pyqt_code_editor/mixins/: __init__.py  auto_pair.py  base.py  check.py  comment.py  complete.py  execute.py  file_link.py  highlight_syntax.py  line_number.py  python_auto_indent.py  search_replace.py  shortcuts.py  symbols.py  theme.py  zoom.py
pyqt_code_editor/syntax_highlighters/: syntax_highlighter.py
pyqt_code_editor/widgets/: __init__.py  completion_popup.py  editor_panel.py  find_in_files.py  jupyter_console.py  project_explorer.py  quick_open_file_dialog.py  search_replace_frame.py  tab_splitter.py  tabbed_editor.py
pyqt_code_editor_mixins/: auto_pair.py  calltip_widget.py  completion_mixin.py  completion_popup.py  completion_worker.py
tests/: test_python_auto_indent.py  test_python_extract_cells_from_code.py  test_python_mask_str.py
(+26 files in other folders)
